# CNN-Seagras

./: .gitignore  README.md  pyproject.toml  test.csv
Treibsel_Anomaly_Detection/: dataset.py  model.py  model_alternate.py  train.py  utils.py
Treibsel_Anomaly_Detection/data/: neu 1.txt
Treibsel_Anomaly_Detection/loss_functions/: IoU.py  dice.py  tversky.py
Treibsel_Anomaly_Detection/utilities/: class_imbalance.ipynb  mask_change.py  name_change.py  random_val_split.py  resize.ipynb  tb_export.py  tensorboard_evaluation.ipynb
Treibsel_Anomaly_Detection/utilities/metric_and_ls_test/: metric_border_cases.ipynb
runs/Apr25_12-37-09_balticmaterials-MS-7B98/: events.out.tfevents.1682419029.balticmaterials-MS-7B98.1107462.0  rename.py
runs/Apr25_12-37-09_balticmaterials-MS-7B98/BCEWithLogitsLoss, Batch: 16, LR: 0.0001_jaccard_index/: events.out.tfevents.1682423087.balticmaterials-MS-7B98.1107462.59
runs/Apr25_12-37-09_balticmaterials-MS-7B98/BCEWithLogitsLoss, Batch: 16, LR: 0.0001_loss/: events.out.tfevents.1682423087.balticmaterials-MS-7B98.1107462.60
runs/Apr25_12-37-09_balticmaterials-MS-7B98/BCEWithLogitsLoss, Batch: 16, LR: 0.001_dice_coefficient/: events.out.tfevents.1682423572.balticmaterials-MS-7B98.1107462.64
runs/Apr25_12-37-09_balticmaterials-MS-7B98/BCEWithLogitsLoss, Batch: 16, LR: 0.001_jaccard_index/: events.out.tfevents.1682423572.balticmaterials-MS-7B98.1107462.65
runs/Apr25_12-37-09_balticmaterials-MS-7B98/BCEWithLogitsLoss, Batch: 16, LR: 0.001_recall/: events.out.tfevents.1682423572.balticmaterials-MS-7B98.1107462.62
(+445 files in other folders)
